# brewie-mcp-server

./: CONTRIBUTING.md  Dockerfile  GLOBAL_UPDATES.md  LICENSE  MCPFUNCTIONS.md  README.md  SART_EX.bat  SECURITY_WARNING.md  SOL_SETUP_INSTRUCTIONS.md  pyproject.toml  server.py  smithery.yaml  voice_agent.py
ROS/: action_groups.py
audio_out/: I am ready
msgs/geometry_msgs/: twist.py
msgs/sensor_msgs/: __init__.py  image.py  jointstate.py
